compiler/driver/tests/snapshots/fixtures__m7-overload__overload-generics.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== ast ==
SourceFile
    @Intrinsic("rt_write")
  fun write(message: String)
  fun print(message: Any)
    =
      Call write
        MethodCall toString
          Var message
  fun println(message: Any)
    Call write
      MethodCall toString
        Var message
    Call write
      StringLiteral "\n"
SourceFile
  enum Option<T>
    Some(T)
    None
SourceFile
  fun id<T>(x: T): T
    =
      Var x
  fun id(x: Int): Int
    =
      Binary Add
        Var x
        IntLiteral 100
  fun main()
    Call println
      Call id
        IntLiteral 1
    Call println
      Call id
        StringLiteral "a"

== hir ==
Module
  enum Option<T>
    Some(_1: T0)
    None()
  fun write(): Unit <intrinsic rt_write>
  fun print(message: Any): Unit
    Call write : Unit
      MethodCall Any.toString : String
        Local message : Any
    return
  fun println(message: Any): Unit
    Call write : Unit
      MethodCall Any.toString : String
        Local message : Any
    Call write : Unit
      StringLiteral "\n" : String
  fun id<T>(x: T0): T0
    return
      Local x : T0
  fun id(x: Int): Int
    return
      Binary Add : Int
        Local x : Int
        IntLiteral 100 : Int
  fun main(): Unit
    Call println : Unit
      Box : Any
        Call id : Int
          IntLiteral 1 : Int
    Call println : Unit
      Call id<String> : Any
        StringLiteral "a" : String
  entry main
  instance id<String>

== mir ==
Module
  class box$I vtable=3 itables=0
  fun print @scoop.print(message: Any) -> Unit
    Call @scoop_rt_print direct
      Call @scoop.Any.toString direct
        Local message
    return
  fun println @scoop.println(message: Any) -> Unit
    Call @scoop_rt_print direct
      Call @scoop.Any.toString direct
        Local message
    Call @scoop_rt_print direct
      StringConst @scoop.str.0
  fun id @scoop.id(x: Int) -> Int
    return
      Binary IntAdd
        Local x
        IntLiteral 100
  fun main @scoop_main() -> Unit
    Call @scoop.println direct
      Box
        Call @scoop.id direct
          IntLiteral 1
    Call @scoop.println direct
      Call @scoop.id$S direct
        StringConst @scoop.str.1
  fun id @scoop.id$S(x: String) -> String
    return
      Local x
  fun eq.I @scoop.eq.I(this: Any, other: Any) -> Boolean
    val $a: Int
      Unbox
        Local this
    val $b: Int
      Unbox
        Local other
    return
      Binary IntEq
        Local $a
        Local $b
  fun tostring.I @scoop.tostring.I(this: Any) -> String
    return
      Call @scoop_rt_int_to_string direct
        Unbox
          Local this
  str @scoop.str.0 "\n"
  str @scoop.str.1 "a"
  entry @scoop_main

== lir ==
Module
  global @scoop.str.0 = "\n"
  global @scoop.str.1 = "a"
  global @scoop_td_box$I = c""
  fun @scoop.print(ptr) -> void
  block entry
    t0 = extract param0, 0 : ptr
    t1 = extract t0, 5 : ptr
    t2 = call_indirect t1[2](param0) : ptr
    call @scoop_rt_print(t2)
    t3 = aggregate () : {}
    ret
  fun @scoop.println(ptr) -> void
  block entry
    t0 = extract param0, 0 : ptr
    t1 = extract t0, 5 : ptr
    t2 = call_indirect t1[2](param0) : ptr
    call @scoop_rt_print(t2)
    t3 = aggregate () : {}
    call @scoop_rt_print(global0)
    t4 = aggregate () : {}
    ret
  fun @scoop.id(i64) -> i64
  block entry
    t0 = Add param0, 100 : i64
    ret t0
  fun @scoop_main() -> void
  block entry
    t0 = call @scoop.id(1) : i64
    t1 = call @scoop_rt_box(global2, t0, 8) : ptr
    call @scoop.println(t1)
    t2 = aggregate () : {}
    t3 = call @scoop.id$S(global1) : ptr
    call @scoop.println(t3)
    t4 = aggregate () : {}
    ret
  fun @scoop.id$S(ptr) -> ptr
  block entry
    ret param0
  fun @scoop.eq.I(ptr, ptr) -> i1
    local %0 $a: i64
    local %1 $b: i64
  block entry
    t0 = extract param0, 1 : i64
    store t0 -> local0
    t1 = extract param1, 1 : i64
    store t1 -> local1
    t2 = Eq local0, local1 : i1
    ret t2
  fun @scoop.tostring.I(ptr) -> ptr
  block entry
    t0 = extract param0, 1 : i64
    t1 = call @scoop_rt_int_to_string(t0) : ptr
    ret t1
  td box$I @scoop_td_box$I size=16 vtable=3 itables=0
  layout String size=16 align=8 refs=[]
  layout Int size=8 align=8 refs=[]
  layout Boolean size=1 align=1 refs=[]
  layout box$I size=16 align=8 refs=[]
  entry @scoop_main

== run ==
101
a
