compiler/driver/tests/snapshots/fixtures__m7-overload__overload-methods.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== ast ==
SourceFile
    @Intrinsic("rt_write")
  fun write(message: String)
  fun print(message: Any)
    =
      Call write
        MethodCall toString
          Var message
  fun println(message: Any)
    Call write
      MethodCall toString
        Var message
    Call write
      StringLiteral "\n"
SourceFile
  enum Option<T>
    Some(T)
    None
SourceFile
  open class A()
    fun s
    fun s
  class B() : A(<0 args>)
    fun s
  fun main()
    val a: A
      Call B
    Call println
      MethodCall s
        Var a
        IntLiteral 1
    Call println
      MethodCall s
        Var a
        StringLiteral "x"

== hir ==
Module
  enum Option<T>
    Some(_1: T0)
    None()
  open class A()
  class B()
  fun write(): Unit <intrinsic rt_write>
  fun print(message: Any): Unit
    Call write : Unit
      MethodCall Any.toString : String
        Local message : Any
    return
  fun println(message: Any): Unit
    Call write : Unit
      MethodCall Any.toString : String
        Local message : Any
    Call write : Unit
      StringLiteral "\n" : String
  fun main(): Unit
    val local0
      ClassInit B : A
    Call println : Unit
      Box : Any
        MethodCall A.s : Int
          Local a : A
          IntLiteral 1 : Int
    Call println : Unit
      Box : Any
        MethodCall A.s : Int
          Local a : A
          StringLiteral "x" : String
  entry main

== mir ==
Module
  class A vtable=5 itables=0
  class B vtable=5 itables=0
  class box$I vtable=3 itables=0
  fun print @scoop.print(message: Any) -> Unit
    Call @scoop_rt_print direct
      Call @scoop.Any.toString direct
        Local message
    return
  fun println @scoop.println(message: Any) -> Unit
    Call @scoop_rt_print direct
      Call @scoop.Any.toString direct
        Local message
    Call @scoop_rt_print direct
      StringConst @scoop.str.0
  fun main @scoop_main() -> Unit
    val a: A
      Call @scoop.ctor.B direct
    Call @scoop.println direct
      Box
        Call @scoop.A.s.I direct
          Local a
          IntLiteral 1
    Call @scoop.println direct
      Box
        Call @scoop.A.s.S direct
          Local a
          StringConst @scoop.str.1
  fun A.s @scoop.A.s.I(this: A, v: Int) -> Int
    return
      IntLiteral 1
  fun A.s @scoop.A.s.S(this: A, v: String) -> Int
    return
      IntLiteral 2
  fun B.s @scoop.B.s(this: B, v: Int) -> Int
    return
      IntLiteral 3
  fun ctor.A @scoop.ctor.A() -> A
    return
      ClassInit A
  fun ctor.B @scoop.ctor.B() -> B
    return
      ClassInit B
  fun eq.I @scoop.eq.I(this: Any, other: Any) -> Boolean
    val $a: Int
      Unbox
        Local this
    val $b: Int
      Unbox
        Local other
    return
      Binary IntEq
        Local $a
        Local $b
  fun tostring.I @scoop.tostring.I(this: Any) -> String
    return
      Call @scoop_rt_int_to_string direct
        Unbox
          Local this
  str @scoop.str.0 "\n"
  str @scoop.str.1 "x"
  entry @scoop_main

== lir ==
Module
  global @scoop.str.0 = "\n"
  global @scoop.str.1 = "x"
  global @scoop_td_box$I = c""
  global @scoop_td_A = c""
  global @scoop_td_B = c""
  fun @scoop.print(ptr) -> void
  block entry
    t0 = extract param0, 0 : ptr
    t1 = extract t0, 5 : ptr
    t2 = call_indirect t1[2](param0) : ptr
    call @scoop_rt_print(t2)
    t3 = aggregate () : {}
    ret
  fun @scoop.println(ptr) -> void
  block entry
    t0 = extract param0, 0 : ptr
    t1 = extract t0, 5 : ptr
    t2 = call_indirect t1[2](param0) : ptr
    call @scoop_rt_print(t2)
    t3 = aggregate () : {}
    call @scoop_rt_print(global0)
    t4 = aggregate () : {}
    ret
  fun @scoop_main() -> void
    local %0 a: ptr
  block entry
    t0 = call @scoop.ctor.B() : ptr
    store t0 -> local0
    t1 = extract local0, 0 : ptr
    t2 = extract t1, 5 : ptr
    t3 = call_indirect t2[3](local0, 1) : i64
    t4 = call @scoop_rt_box(global2, t3, 8) : ptr
    call @scoop.println(t4)
    t5 = aggregate () : {}
    t6 = extract local0, 0 : ptr
    t7 = extract t6, 5 : ptr
    t8 = call_indirect t7[4](local0, global1) : i64
    t9 = call @scoop_rt_box(global2, t8, 8) : ptr
    call @scoop.println(t9)
    t10 = aggregate () : {}
    ret
  fun @scoop.A.s.I(ptr, i64) -> i64
  block entry
    ret 1
  fun @scoop.A.s.S(ptr, ptr) -> i64
  block entry
    ret 2
  fun @scoop.B.s(ptr, i64) -> i64
  block entry
    ret 3
  fun @scoop.ctor.A() -> ptr
  block entry
    t0 = call @scoop_rt_alloc(global3, 8) : ptr
    ret t0
  fun @scoop.ctor.B() -> ptr
  block entry
    t0 = call @scoop_rt_alloc(global4, 8) : ptr
    ret t0
  fun @scoop.eq.I(ptr, ptr) -> i1
    local %0 $a: i64
    local %1 $b: i64
  block entry
    t0 = extract param0, 1 : i64
    store t0 -> local0
    t1 = extract param1, 1 : i64
    store t1 -> local1
    t2 = Eq local0, local1 : i1
    ret t2
  fun @scoop.tostring.I(ptr) -> ptr
  block entry
    t0 = extract param0, 1 : i64
    t1 = call @scoop_rt_int_to_string(t0) : ptr
    ret t1
  td A @scoop_td_A size=8 vtable=5 itables=0
  td box$I @scoop_td_box$I size=16 vtable=3 itables=0
  td B @scoop_td_B size=8 vtable=5 itables=0
  layout String size=16 align=8 refs=[]
  layout Int size=8 align=8 refs=[]
  layout Boolean size=1 align=1 refs=[]
  layout A size=8 align=8 refs=[]
  layout B size=8 align=8 refs=[]
  layout box$I size=16 align=8 refs=[]
  entry @scoop_main

== run ==
3
2
