compiler/driver/tests/snapshots/fixtures__m7-overload__overload-subtype.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== ast ==
SourceFile
    @Intrinsic("rt_write")
  fun write(message: String)
  fun print(message: Any)
    =
      Call write
        MethodCall toString
          Var message
  fun println(message: Any)
    Call write
      MethodCall toString
        Var message
    Call write
      StringLiteral "\n"
SourceFile
  enum Option<T>
    Some(T)
    None
SourceFile
  open class Shape(val name: String)
  class Circle(val r: Int) : Shape(<1 args>)
  fun tag(s: Shape): String
    =
      StringLiteral "shape"
  fun tag(i: Int): String
    =
      StringLiteral "int"
  fun pick(v: Int): String
    =
      StringLiteral "int"
  fun pick(v: Any): String
    =
      StringLiteral "any"
  fun main()
    Call println
      Call tag
        Call Circle
          IntLiteral 1
    Call println
      Call tag
        IntLiteral 7
    Call println
      Call pick
        IntLiteral 5

== hir ==
Module
  enum Option<T>
    Some(_1: T0)
    None()
  open class Shape(name: String)
  class Circle(r: Int)
  fun write(): Unit <intrinsic rt_write>
  fun print(message: Any): Unit
    Call write : Unit
      MethodCall Any.toString : String
        Local message : Any
    return
  fun println(message: Any): Unit
    Call write : Unit
      MethodCall Any.toString : String
        Local message : Any
    Call write : Unit
      StringLiteral "\n" : String
  fun tag(s: Shape): String
    return
      StringLiteral "shape" : String
  fun tag(i: Int): String
    return
      StringLiteral "int" : String
  fun pick(v: Int): String
    return
      StringLiteral "int" : String
  fun pick(v: Any): String
    return
      StringLiteral "any" : String
  fun main(): Unit
    Call println : Unit
      Call tag : Any
        ClassInit Circle : Shape
          IntLiteral 1 : Int
    Call println : Unit
      Call tag : Any
        IntLiteral 7 : Int
    Call println : Unit
      Call pick : Any
        IntLiteral 5 : Int
  entry main

== mir ==
Module
  class Shape vtable=3 itables=0
  class Circle vtable=3 itables=0
  fun print @scoop.print(message: Any) -> Unit
    Call @scoop_rt_print direct
      Call @scoop.Any.toString direct
        Local message
    return
  fun println @scoop.println(message: Any) -> Unit
    Call @scoop_rt_print direct
      Call @scoop.Any.toString direct
        Local message
    Call @scoop_rt_print direct
      StringConst @scoop.str.0
  fun tag @scoop.tag.Shape(s: Shape) -> String
    return
      StringConst @scoop.str.1
  fun tag @scoop.tag.I(i: Int) -> String
    return
      StringConst @scoop.str.2
  fun pick @scoop.pick.I(v: Int) -> String
    return
      StringConst @scoop.str.3
  fun pick @scoop.pick.Any(v: Any) -> String
    return
      StringConst @scoop.str.4
  fun main @scoop_main() -> Unit
    Call @scoop.println direct
      Call @scoop.tag.Shape direct
        Call @scoop.ctor.Circle direct
          IntLiteral 1
    Call @scoop.println direct
      Call @scoop.tag.I direct
        IntLiteral 7
    Call @scoop.println direct
      Call @scoop.pick.I direct
        IntLiteral 5
  fun ctor.Shape @scoop.ctor.Shape(name: String) -> Shape
    return
      ClassInit Shape
        Local name
  fun ctor.Circle @scoop.ctor.Circle(r: Int) -> Circle
    return
      ClassInit Circle
        StringConst @scoop.str.5
        Local r
  str @scoop.str.0 "\n"
  str @scoop.str.1 "shape"
  str @scoop.str.2 "int"
  str @scoop.str.3 "int"
  str @scoop.str.4 "any"
  str @scoop.str.5 "c"
  entry @scoop_main

== lir ==
Module
  global @scoop.str.0 = "\n"
  global @scoop.str.1 = "shape"
  global @scoop.str.2 = "int"
  global @scoop.str.3 = "int"
  global @scoop.str.4 = "any"
  global @scoop.str.5 = "c"
  global @scoop_td_Shape = c""
  global @scoop_td_Circle = c""
  fun @scoop.print(ptr) -> void
  block entry
    t0 = extract param0, 0 : ptr
    t1 = extract t0, 5 : ptr
    t2 = call_indirect t1[2](param0) : ptr
    call @scoop_rt_print(t2)
    t3 = aggregate () : {}
    ret
  fun @scoop.println(ptr) -> void
  block entry
    t0 = extract param0, 0 : ptr
    t1 = extract t0, 5 : ptr
    t2 = call_indirect t1[2](param0) : ptr
    call @scoop_rt_print(t2)
    t3 = aggregate () : {}
    call @scoop_rt_print(global0)
    t4 = aggregate () : {}
    ret
  fun @scoop.tag.Shape(ptr) -> ptr
  block entry
    ret global1
  fun @scoop.tag.I(i64) -> ptr
  block entry
    ret global2
  fun @scoop.pick.I(i64) -> ptr
  block entry
    ret global3
  fun @scoop.pick.Any(ptr) -> ptr
  block entry
    ret global4
  fun @scoop_main() -> void
  block entry
    t0 = call @scoop.ctor.Circle(1) : ptr
    t1 = call @scoop.tag.Shape(t0) : ptr
    call @scoop.println(t1)
    t2 = aggregate () : {}
    t3 = call @scoop.tag.I(7) : ptr
    call @scoop.println(t3)
    t4 = aggregate () : {}
    t5 = call @scoop.pick.I(5) : ptr
    call @scoop.println(t5)
    t6 = aggregate () : {}
    ret
  fun @scoop.ctor.Shape(ptr) -> ptr
  block entry
    t0 = call @scoop_rt_alloc(global6, 16) : ptr
    heap_store t0 1 param0
    ret t0
  fun @scoop.ctor.Circle(i64) -> ptr
  block entry
    t0 = call @scoop_rt_alloc(global7, 24) : ptr
    heap_store t0 1 global5
    heap_store t0 2 param0
    ret t0
  td Shape @scoop_td_Shape size=16 vtable=3 itables=0
  td Circle @scoop_td_Circle size=24 vtable=3 itables=0
  layout String size=16 align=8 refs=[]
  layout Int size=8 align=8 refs=[]
  layout Boolean size=1 align=1 refs=[]
  layout Shape size=16 align=8 refs=[8]
  layout Circle size=24 align=8 refs=[8]
  entry @scoop_main

== run ==
shape
int
int
